--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 
   <title>DZIRE - Dance Club</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
-  <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+  <meta name="title" content="DZIRE Dance Club">
+  <meta name="description" content="This is a Dance club html template made by D-SoMe">
 
 
   <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
